# rtow-rs

./: Cargo.toml
src/: camera.rs  color.rs  data.rs  dielectric.rs  hittable.rs  lambertian.rs  main.rs  material.rs  metal.rs  ray.rs  sphere.rs
src/geometry/: camera.rs  hittable.rs  mod.rs  ray.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
