[package]
name = "raytracing"
version = "0.1.0"
authors = ["Michaël Melchiore <rohel01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = {version = "0.15.0", features = ["rayon"]}
rand = "0.7.3"
rayon = "1.5.0"